fix windows overflow

--- a/app/styles/airon-style.less
+++ b/app/styles/airon-style.less
@@ -138,6 +138,7 @@ nav.nav-bar {
         display: flex;
         flex-direction: row;
         padding: 18px;
+        overflow: hidden;
     }
 }
 
